# air-hockey-robot-v1

./: LICENSE  README.mb  README.md  css.bundle.js  index.bundle.js  index.html
cad/: air_hockey_v1_1.stp  airhockey_v1.stp
src/: README.mb  test.mb
src/air_hockey_robot/: CMakeLists.txt  package.xml
src/air_hockey_robot/action/: MotorControll.action
src/air_hockey_robot/config/: puck_detector.yaml
src/air_hockey_robot/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/air_hockey_robot/install/air_hockey_robot/share/air_hockey_robot/: package.zsh
src/air_hockey_robot/launch/: launch.py  test.py
src/air_hockey_robot/log/: latest_build
src/air_hockey_robot/msg/: ArmMotionPlan.msg  ArmStatus.msg  Dynamixel.msg  GameStatus.msg  MotorCommands.msg  ObjectMotion.msg  ObjectMotionPrediction.msg  ObjectPrediction.msg  ObjectState.msg  ObjectsState.msg  PuckVector.msg  Roi.msg  TargetPoint.msg  Trajectory.msg  VisualPoint.msg  VisualPoints.msg
src/air_hockey_robot/scripts/: arm_motion_planner.py  arm_motion_planner_node.py
src/air_hockey_robot/src/: air_hockey_robot_config.hpp  arm_motion_planner.cpp  arm_motion_planner.hpp  camera_driver.cpp  camera_driver.hpp  camera_driver_node.cpp  object_detector.cpp  object_detector.hpp  object_detector_node.cpp  object_predictor.cpp  object_predictor.hpp  object_predictor_node.cpp  velocity_estimator.cpp  velocity_estimator.hpp  velocity_estimator_node.cpp
src/air_hockey_robot/srv/: ArmMotionPlan.srv
src/air_hockey_robot_py/: package.xml  setup.cfg  setup.py
src/air_hockey_robot_py/air_hockey_robot_py/: arm_motion_planner.py  group_sync_read.py  group_sync_write.py  motor_communication.py  packet_handler.py  protocol1_packet_handler.py  protocol2_packet_handler.py  py_camera_driver.py
src/air_hockey_robot_py/launch/: no_control_launch.py  no_pack_launch.py
src/install/: local_setup.sh  setup.ps1  setup.sh
src/install/air_hockey_robot/share/air_hockey_robot/: package.bash
src/log/: latest_build
